--- a/report.ipynb
+++ b/report.ipynb
@@ -14,7 +14,13 @@
         "\n",
         "**Initial Conclusions**\n",
         "\n",
-        "The coupon program is only 41% for bar coupons.\n"
+        "The coupon program is only 41% for bar coupons.\n",
+        "\n",
+        "**However, the data suggests that targeting a particular segment may increase the bar coupon type acceptance.**\n",
+        "\n",
+        "**Those that frequent a bar periodically are highly likely to accept a bar coupon as as long as they do not have kids in the car**\n",
+        "\n",
+        "**The most promising age segment is age 21 to 31.**\n"
       ]
     },
     {
@@ -25,36 +31,6 @@
       ],
       "metadata": {
         "id": "2Jqk4_7NyfCA"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "REZIaoL8pgGs"
-      },
-      "source": [
-        "The above chart shows you **which type of coupon is outperforming and underperforming** the overall average.\n",
-        "For example, **'carry out & takeaway' at 73.5% acceptance** is better than the overall average of 56.8% and far more accepted than bar coupons at 41%.\n",
-        "\n",
-        "This relative difference makes intuitive sense as it seems someone is more likely to decide to grab some 'carry out' food and keep going to their destination, while many people may be wary of suddenly deciding to drink alcohol while currently driving to another destination.\n",
-        "\n",
-        "##However, the data suggests that targeting a particular segment may increase the bar coupon type acceptance...\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##Those that frequent a bar periodically are highly likely to accept a bar coupon as as long as they do not have kids in the car##\n",
-        "\n",
-        "\n",
-        "The most promising age segment is age 21 to 31.\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "JqOXEIRyfy8d"
       }
     },
     {
