added key hypothesis calculation

--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -1392,11 +1392,11 @@
       "execution_count": 10,
       "metadata": {
         "id": "QEoynpGoii-D",
-        "outputId": "d80762f8-fea0-45de-ab3c-435e8dc0dc99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 650
-        }
+        },
+        "outputId": "d80762f8-fea0-45de-ab3c-435e8dc0dc99"
       },
       "outputs": [
         {
@@ -1427,11 +1427,11 @@
       "execution_count": 11,
       "metadata": {
         "id": "WcXWrlzVii-D",
-        "outputId": "a39e4193-5086-4e78-8b2a-b39c02caea06",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "outputId": "a39e4193-5086-4e78-8b2a-b39c02caea06"
       },
       "outputs": [
         {
@@ -1749,11 +1749,11 @@
       "execution_count": 12,
       "metadata": {
         "id": "fcqVKaq1ii-D",
-        "outputId": "aba6f80e-b682-45ad-85d8-3b22a5781082",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 807
-        }
+        },
+        "outputId": "aba6f80e-b682-45ad-85d8-3b22a5781082"
       },
       "outputs": [
         {
@@ -1833,11 +1833,11 @@
       "execution_count": 13,
       "metadata": {
         "id": "XEne-hmwii-H",
-        "outputId": "41ff4fc6-44a9-4f73-8dec-5ea146e06d34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 290
-        }
+        },
+        "outputId": "41ff4fc6-44a9-4f73-8dec-5ea146e06d34"
       },
       "outputs": [
         {
@@ -2276,10 +2276,10 @@
       "execution_count": 14,
       "metadata": {
         "id": "T30RDUjaii-H",
-        "outputId": "e8fbba35-fe11-459c-c069-c0dcca5a46b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e8fbba35-fe11-459c-c069-c0dcca5a46b9"
       },
       "outputs": [
         {
@@ -2328,10 +2328,10 @@
       ],
       "metadata": {
         "id": "YJGKvWNYO04a",
-        "outputId": "bdbeb140-3b9b-4b03-ddda-c52e2e701ab7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bdbeb140-3b9b-4b03-ddda-c52e2e701ab7"
       },
       "execution_count": 15,
       "outputs": [
@@ -2371,11 +2371,11 @@
       "execution_count": 16,
       "metadata": {
         "id": "orRuGqLLii-H",
-        "outputId": "6f3af2a7-68a7-4d19-8b81-47b36d99156c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 737
-        }
+        },
+        "outputId": "6f3af2a7-68a7-4d19-8b81-47b36d99156c"
       },
       "outputs": [
         {
@@ -2471,11 +2471,11 @@
       "execution_count": 17,
       "metadata": {
         "id": "Nnno9Aw_ii-I",
-        "outputId": "47f5e35d-7f96-4ae8-b812-baf289886203",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "47f5e35d-7f96-4ae8-b812-baf289886203"
       },
       "outputs": [
         {
@@ -2616,10 +2616,10 @@
       "execution_count": 18,
       "metadata": {
         "id": "RSkJrd_yCbHe",
-        "outputId": "d0dbd8b8-1452-430e-c158-aa9b3c54a711",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d0dbd8b8-1452-430e-c158-aa9b3c54a711"
       },
       "outputs": [
         {
@@ -2689,11 +2689,11 @@
       ],
       "metadata": {
         "id": "RG_o3ohWH2Ou",
-        "outputId": "3147f01c-ba52-4d14-83bd-64dbb826ff24",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 650
-        }
+        },
+        "outputId": "3147f01c-ba52-4d14-83bd-64dbb826ff24"
       },
       "execution_count": 19,
       "outputs": [
@@ -2752,10 +2752,10 @@
       "execution_count": 20,
       "metadata": {
         "id": "KyODpN_pii-I",
-        "outputId": "62469cd4-8637-4461-9f64-863215e75520",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "62469cd4-8637-4461-9f64-863215e75520"
       },
       "outputs": [
         {
@@ -2844,10 +2844,10 @@
       ],
       "metadata": {
         "id": "TO_s-SuKZjH3",
-        "outputId": "205f98a9-4186-4d44-c5eb-4aee15a86b4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "205f98a9-4186-4d44-c5eb-4aee15a86b4c"
       },
       "execution_count": 21,
       "outputs": [
@@ -2879,10 +2879,10 @@
       "execution_count": 22,
       "metadata": {
         "id": "uiUMYWjGDtPb",
-        "outputId": "fc155af0-633c-442f-cf6b-aab95e90c954",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fc155af0-633c-442f-cf6b-aab95e90c954"
       },
       "outputs": [
         {
@@ -2923,10 +2923,10 @@
       "execution_count": 23,
       "metadata": {
         "id": "s6gE2h_LENPt",
-        "outputId": "1c239533-eaf9-48d3-bd37-71bd5cf2769c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1c239533-eaf9-48d3-bd37-71bd5cf2769c"
       },
       "outputs": [
         {
@@ -2959,6 +2959,55 @@
       "metadata": {
         "id": "vckldk3Gffc2"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Let's look at the combination of drivers who:\n",
+        "*   Go more than once a month, and\n",
+        "*   Do not have kids in the car, and\n",
+        "*   Are ages 21,26, and 31\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Bnpz9p_tFuY0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age_21_26_31 = ['21','26','31']\n",
+        "hypothesis = data_bar[(data_bar['Bar'].isin(bar_ge1_list)) & (data_bar['passanger'].isin(not_a_kid_list)) & (data_bar['age'].isin(age_21_26_31))]\n",
+        "hypothesis_total = hypothesis['Y'].count()\n",
+        "hypothesis_accepted_count = hypothesis[hypothesis['Y']==1]['Y'].count()\n",
+        "hypothesis_accept_pct = round(hypothesis_accepted_count/hypothesis_total*100, 1)\n",
+        "print(\"Acceptance rate of drivers who:\")\n",
+        "print(\"-Go more than once a month, and\")\n",
+        "print(\"-Do not have kids in the car, and\")\n",
+        "print(\"-Are ages 21,26, and 31\")\n",
+        "print (f\"They accept coupons at this rate: {hypothesis_accept_pct}% -> {hypothesis_accepted_count} of {hypothesis_total}\")"
+      ],
+      "metadata": {
+        "id": "Aw8y_Y3QFsT8",
+        "outputId": "e734f4da-240a-43f2-d022-cf21e471c345",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Acceptance rate of drivers who:\n",
+            "-Go more than once a month, and\n",
+            "-Do not have kids in the car, and\n",
+            "-Are ages 21,26, and 31\n",
+            "They accept coupons at this rate: 72.6% -> 300 of 413\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3028,11 +3077,11 @@
       "execution_count": 24,
       "metadata": {
         "id": "IZVqJfJmii-I",
-        "outputId": "e254fff7-4f9a-499f-f43f-ac27f06d9e71",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 807
-        }
+        },
+        "outputId": "e254fff7-4f9a-499f-f43f-ac27f06d9e71"
       },
       "outputs": [
         {
