--- a/report.ipynb
+++ b/report.ipynb
@@ -101,6 +101,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#Key finding:\n",
+        "\n",
+        "**Drivers who:**\n",
+        "*   **Go to bars once a month or more, and**\n",
+        "*   **Do not have kids in the car, and**\n",
+        "*   **Are ages 21,26, and 31**\n",
+        "\n",
+        "**Accept coupons at this rate:**\n",
+        "##**72.6% -> 300 of 413**##\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YJVBKK30IeE7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##  Additional Analysis Ideas\n",
         "From a marketing business perspective, it will be important to determine how to ascertain who will not have a kid in the car. The passenger insight may not be an actionable.\n",
         "\n",
