very minor code and wording changes

--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -1782,7 +1782,6 @@
         "data_grp_slice_pct = pd.merge(data_grp_slice, data_grp_slice_total, on='Coupon_Type', how='left')\n",
         "data_grp_slice_pct.rename(columns = {'Count_x':'Count', 'Count_y':'Total_Count'}, inplace = True)\n",
         "data_grp_slice_pct['Acceptance_Pct'] = round(data_grp_slice_pct['Count']/data_grp_slice_pct['Total_Count']*100,1)\n",
-        "#data_grp_slice_pct['Acceptance_Pct'] = round(data_grp_slice_pct['Count']/total*100,1)\n",
         "data_grp_slice_pct = data_grp_slice_pct[data_grp_slice_pct['Accepted'] == 'Accepted']\n",
         "data_grp_slice_pct\n"
       ]
@@ -2346,8 +2345,6 @@
         "pct_bar_rel = data_grp_slice_pct[data_grp_slice_pct['Coupon_Type']=='Bar']['Acceptance_Pct']\n",
         "print(pct_bar_rel.values[0])\n",
         "\n",
-        "\n",
-        "\n",
         "# over all coupons sent, the proportion of bar coupons is\n",
         "print('Percent Bar Coupons accepted vs ALL Coupons Sent')\n",
         "pct_bar_all = round(data_grp_slice[(data_grp_slice['Accepted']=='Accepted') & (data_grp_slice['Coupon_Type'] == 'Bar') ]['Count']/total*100)\n",
@@ -2494,7 +2491,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "So this result may indicate that those that go to a bar very often are incentivized further by coupons. But note that there are only 153 of these frequent bar visitors.\n",
+        "So this result may indicate that those that go to a bar very often are incentivized further by coupons. But note that there are only 153 of these very frequent bar visitors.\n",
         "\n",
         "One business issue: Giving coupons to someone already going frequently may degrade overall profit margins."
       ],
@@ -2589,7 +2586,7 @@
         ": {round(bar_ge1_and_gt25*100,1)}% -> {in_accepted_count} of {in_total}\")\n",
         "\n",
         "# Repeat same solution pattern from above BUT this time get the opposite or negation set of the above\n",
-        "# In boolean logic, the negation of “A and B\"“not(A) OR not(B)”\n",
+        "# In boolean logic, the negation of \"A AND B\" is \"not(A) OR not(B)\"\n",
         "# So we are looking for those that go to bar less than once a month or are less than or equal to 25 accept at this rate\n",
         "# Use the ~ character in front of dataframe when using .isin() to get NOT isin result\n",
         "data_bar_lt1_or_le25 = data_bar[(~data_bar['Bar'].isin(bar_ge1_list)) | (~data_bar['age'].isin(age_gt25_list))]\n",
